# Hermes-Portal

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Changelog_eng.md  Dockerfile  LICENSE  README.de.md  README.md  docker-compose.yml  pyproject.toml  repository.yaml
.github/workflows/: ci.yml  docker.yml  release.yml
_wiki_server/: __version__.py  config.defaults.json  config.py  entry_pyinstaller.py  hermes_client.py  hermes_portal.spec  i18n.py  requirements.txt  wiki_app.py
_wiki_server/i18n/: de.json  en.json  es.json  fr.json
_wiki_server/scripts/: fetch_monaco.py  sign_macos_app.py
_wiki_server/static/portal/: site-header.js  style.css
_wiki_server/templates/: _md_toolbar.html  activity.html  aufgaben.html  aufgaben_default.md  base.html  blog_missing.html  briefing.html  briefing_default.html  chat.html  dashboard.html  delete.html  edit.html  explorer.html  index.html  new.html  news.html  page.html  search.html  settings.html  tags.html
_wiki_server/templates/agent_scripts/: blog_generator.py  daily_briefing.py
docs/: systemd.service
hermes_portal/: CHANGELOG.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
homeassistant/hermes_portal/: Dockerfile  build.yaml  config.yaml  prepare.sh
